<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_For_dialogs"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/large_margin_And_padding"
        android:paddingHorizontal="@dimen/large_margin_And_padding"
        android:background="@drawable/background_dialog_shape">

    <TextView
        android:id="@+id/tv_dialogExport_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/ImportFile"
        android:textStyle="italic|bold"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:textSize="@dimen/Group_Text_Size"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:background="@drawable/divider_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/circle_shape"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ImportFileContent"
            android:lineSpacingMultiplier="1.2"
            android:textColor="@color/color_content_text"
            android:layout_marginStart="4dp"
            android:textSize="@dimen/details_Text_Size"/>
    </LinearLayout>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/large_margin_And_padding"
    android:background="@drawable/edit_text_shape">
    <TextView
        android:id="@+id/tv_Dialog_ImportFile_ImportBtnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseFile"
        android:gravity="center_horizontal"
        android:textSize="@dimen/Content_Text_Size"
        android:textColor="@color/white"
        android:visibility="visible"
        android:paddingVertical="@dimen/margin_vertical" />
</FrameLayout>
    </LinearLayout>

</FrameLayout>