<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/popup"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/large_margin_And_padding"
    android:paddingVertical="@dimen/Small_margin_And_padding">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings" />

    <TextView
        android:id="@+id/tv_PopUpGroupMainPage_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="@dimen/details_Text_Size"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_import" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/ic_export" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/ic_delete" />

    <TextView
        android:id="@+id/tv_PopUpGroupMainPage_ImportFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_file"
        android:textSize="@dimen/details_Text_Size"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/tv_PopUpGroupMainPage_settings"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/tv_PopUpGroupMainPage_ExportFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export"
        android:textSize="@dimen/details_Text_Size"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/tv_PopUpGroupMainPage_ImportFile"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/tv_PopUpGroupMainPage_DeleteAllCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteAllCards"
        android:textSize="@dimen/details_Text_Size"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/tv_PopUpGroupMainPage_ExportFile"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />
</androidx.constraintlayout.widget.ConstraintLayout>