<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/standard_margin_And_padding"
        android:paddingVertical="@dimen/standard_margin_And_padding"
        android:paddingHorizontal="@dimen/large_margin_And_padding"
        android:background="@drawable/background_dialog_shape">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialogReviewAlert_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/ReviewAlert"
                android:textColor="@color/white"
                android:textSize="@dimen/Group_Text_Size"
                android:textStyle="italic|bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sw_dialogAlertReview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/sw_dialogAlertReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="@+id/tv_dialogReviewAlert_Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_dialogReviewAlert_Title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:background="@drawable/divider_style"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/circle_shape"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_for_reviewAlert"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/color_content_text"
                android:layout_marginStart="4dp"
                android:textSize="@dimen/details_Text_Size"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/Small_margin_And_padding"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:text="@string/Time"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/timePicker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/et_dialogAlertReview_setTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="1:23 p.m"
                android:textColor="@color/color_details_text"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:timePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Message"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginVertical="@dimen/Small_margin_And_padding"/>

        <EditText
            android:id="@+id/et_DialogAlertReview_Message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_default_message"
            android:textSize="14sp"
            android:ellipsize="end"
            android:maxLines="3"
            android:lineSpacingMultiplier="1.2"
            android:background="@drawable/edit_text_shape"
            android:textColor="@color/white"
            android:paddingVertical="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="50dp"/>
        <TextView
            android:id="@+id/tv_DialogAlertReview_SetAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setTheAlarm"
            android:gravity="center_horizontal"
            android:textSize="@dimen/Group_Text_Size"
            android:textColor="@color/white"
            android:background="@drawable/background_done_btn"
            android:paddingVertical="@dimen/margin_vertical"
            android:layout_marginTop="@dimen/standard_margin_And_padding"/>
    </LinearLayout>
</FrameLayout>