<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingVertical="@dimen/Small_margin_And_padding"
    android:paddingHorizontal="@dimen/large_margin_And_padding"
    android:background="@drawable/popup">


        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit" />

        <TextView
            android:id="@+id/tv_popup_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="@dimen/details_Text_Size"
            app:layout_constraintBottom_toBottomOf="@+id/iv_edit"
            app:layout_constraintStart_toEndOf="@+id/iv_edit"
            app:layout_constraintTop_toTopOf="@+id/iv_edit" />

        <ImageView
            android:id="@+id/iv_export"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_edit"
            app:layout_constraintStart_toStartOf="@+id/iv_edit"
            app:layout_constraintTop_toBottomOf="@+id/iv_edit"
            app:srcCompat="@drawable/ic_export" />

        <TextView
            android:id="@+id/tv_popup_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export"
            android:textSize="@dimen/details_Text_Size"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/iv_export"
            app:layout_constraintStart_toStartOf="@+id/tv_popup_edit"
            app:layout_constraintTop_toTopOf="@+id/iv_export" />

        <ImageView
            android:id="@+id/iv_import"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_export"
            app:layout_constraintStart_toStartOf="@+id/iv_export"
            app:layout_constraintTop_toBottomOf="@+id/iv_export"
            app:srcCompat="@drawable/ic_import" />

        <TextView
            android:id="@+id/tv_popup_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_file"
            android:textSize="@dimen/details_Text_Size"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/iv_import"
            app:layout_constraintStart_toStartOf="@+id/tv_popup_export"
            app:layout_constraintTop_toTopOf="@+id/iv_import" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_import"
            app:layout_constraintStart_toStartOf="@+id/iv_import"
            app:layout_constraintTop_toBottomOf="@+id/iv_import"
            app:srcCompat="@drawable/ic_delete" />

        <TextView
            android:id="@+id/tv_popup_delete_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="@dimen/details_Text_Size"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/iv_delete"
            app:layout_constraintStart_toStartOf="@+id/tv_popup_import"
            app:layout_constraintTop_toTopOf="@+id/iv_delete"
            app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>