<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingVertical="@dimen/Small_margin_And_padding"
    android:paddingHorizontal="@dimen/large_margin_And_padding"
    android:background="@drawable/popup">

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings" />

    <TextView
        android:id="@+id/tv_popup_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="@dimen/details_Text_Size"
        app:layout_constraintBottom_toBottomOf="@+id/iv_settings"
        app:layout_constraintStart_toEndOf="@+id/iv_settings"
        app:layout_constraintTop_toTopOf="@+id/iv_settings" />

    <ImageView
        android:id="@+id/iv_help"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_settings"
        app:layout_constraintStart_toStartOf="@+id/iv_settings"
        app:layout_constraintTop_toBottomOf="@+id/iv_settings"
        app:srcCompat="@drawable/ic_help" />

    <TextView
        android:id="@+id/tv_mainPage_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textColor="@color/white"
        android:textSize="@dimen/details_Text_Size"
        app:layout_constraintBottom_toBottomOf="@+id/iv_help"
        app:layout_constraintStart_toStartOf="@+id/tv_popup_edit"
        app:layout_constraintTop_toTopOf="@+id/iv_help" />

    <ImageView
        android:id="@+id/iv_about"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_help"
        app:layout_constraintStart_toStartOf="@+id/iv_help"
        app:layout_constraintTop_toBottomOf="@+id/iv_help"
        app:srcCompat="@drawable/ic_about" />

    <TextView
        android:id="@+id/tv_mainPage_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="@dimen/details_Text_Size"
        app:layout_constraintBottom_toBottomOf="@+id/iv_about"
        app:layout_constraintStart_toStartOf="@+id/tv_mainPage_help"
        app:layout_constraintTop_toTopOf="@+id/iv_about" />

</androidx.constraintlayout.widget.ConstraintLayout>